[gd_scene load_steps=5 format=3 uid="uid://dtc88l0ddj0xu"]

[ext_resource type="Texture2D" uid="uid://cftx0lbra85ls" path="res://Imagens/Cen√°rios Jogo/You Win.png" id="1_oexkw"]
[ext_resource type="Script" uid="uid://bcme2eh8bgdqi" path="res://Scripts/menu.gd" id="2_0ufqg"]
[ext_resource type="FontFile" uid="uid://jqjuimpqswj8" path="res://Imagens/alegreya-sc/AlegreyaSC-Regular.ttf" id="3_mipet"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x456i"]
size = Vector2(658, 69.543)

[node name="Vitoria" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_oexkw")

[node name="Novo Jogo" type="Area2D" parent="TextureRect"]
position = Vector2(782, 790)
script = ExtResource("2_0ufqg")
metadata/noite = 1
metadata/state = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/Novo Jogo"]
position = Vector2(72, 34)
shape = SubResource("RectangleShape2D_x456i")

[node name="Label" type="Label" parent="TextureRect/Novo Jogo"]
visible = false
offset_left = 17.0
offset_top = -1.0
offset_right = 228.0
offset_bottom = 69.0
rotation = 0.00169743
theme_override_colors/font_color = Color(0.558604, 0.0380295, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mipet")
theme_override_font_sizes/font_size = 45
text = "Menu"

[node name="Label2" type="Label" parent="TextureRect/Novo Jogo"]
visible = false
offset_left = 1.0
offset_top = 50.0
offset_right = 219.0
offset_bottom = 120.0
rotation = 0.00169743
theme_override_colors/font_color = Color(0.558604, 0.0380295, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mipet")
theme_override_font_sizes/font_size = 30
text = "Continuar"

[connection signal="input_event" from="TextureRect/Novo Jogo" to="TextureRect/Novo Jogo" method="_on_input_event"]
[connection signal="mouse_entered" from="TextureRect/Novo Jogo" to="TextureRect/Novo Jogo" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/Novo Jogo" to="TextureRect/Novo Jogo" method="_on_mouse_exited"]
